--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,64 @@ jobs:
           command: |
             make test-e2e
 
+  build_docker:
+    machine:
+      image: ubuntu-2204:2024.01.1
+      resource_class: large
+    steps:
+      - checkout
+      - aws-ecr/build-image:
+          push-image: false
+          dockerfile: Dockerfile
+          path: ./
+          build-path: ./
+          tag: "$CIRCLE_SHA1,$CIRCLE_TAG"
+          repo: "$CIRCLE_PROJECT_REPONAME"
+      - run:
+          name: Save Docker image to export it to workspace
+          command: |
+            docker save $(docker image ls --format '{{.Repository}}:{{.Tag}}') > /tmp/covenant-signer.tar
+      - persist_to_workspace:
+          root: /tmp
+          paths:
+            - covenant-signer.tar
+
+  push_docker:
+    machine:
+      image: ubuntu-2204:2024.01.1
+      resource_class: large
+    steps:
+      - attach_workspace:
+          at: /tmp
+      - run:
+          name: Load Docker image from workspace
+          command: |
+            docker load -i /tmp/covenant-signer.tar
+      - aws-ecr/ecr-login:
+          aws-access-key-id: AWS_ACCESS_KEY_ID
+          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
+          region: "$AWS_REGION"
+      - aws-ecr/push-image:
+          registry-id: AWS_ECR_REGISTRY_ID
+          region: "$AWS_REGION"
+          repo: "$CIRCLE_PROJECT_REPONAME"
+          tag: "$CIRCLE_SHA1,$CIRCLE_TAG"
+
 workflows:
   CI:
     jobs:
       - build_lint_test
+      - build_docker:
+          filters:
+            tags:
+              only: /.*/
+      - push_docker:
+          requires:
+            - build_docker
+          filters:
+            tags:
+              only: /.*/
+            branches:
+              only:
+                - main
+                - dev
