--- a/example/config.toml
+++ b/example/config.toml
@@ -28,24 +28,10 @@ pass = "pass"
 # Btc network (testnet3|mainnet|regtest|simnet|signet)
 network = "regtest"
 
-[params-config]
-# The list of covenant public keys
-covenant_public_keys = []
-
-# The quorum of the covenants required to sign the transaction
-covenant_quorum = 0
-
-# The magic bytes of the network
-magic_bytes = "01020304"
-
-# The number of confirmations required for the staking transaction to be mature
-w = 100
-
-# Timelock in unbonding transaction
-unbonding_time = 100
-
-# Required fee for unbonding transaction
-unbonding_fee = 10000
+[signer-config]
+# required depth of staking transaction before signing of the unbonding transaction
+# will be allowed
+staking-tx-confirmation-depth = 6
 
 [server-config]
 # The address to listen on
