--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,9 +20,13 @@ jobs:
 
   docker_pipeline:
     needs: ["lint_test"]
-    uses: babylonlabs-io/.github/.github/workflows/reusable_docker_pipeline.yml@v0.6.0
+    uses: babylonlabs-io/.github/.github/workflows/reusable_docker_pipeline.yml@v0.12.2
     secrets: inherit
     with:
      publish: true
      dockerfile: ./Dockerfile
      repoName: covenant-signer
+     docker_scan: true
+    permissions:
+      security-events: write
+      packages: read
