--- a/example/config.toml
+++ b/example/config.toml
@@ -27,6 +27,8 @@ user = "user"
 pass = "pass"
 # Btc network (testnet3|mainnet|regtest|simnet|signet)
 network = "regtest"
+# Signer type (psbt|privkey)
+signer-type = "psbt"
 
 [server-config]
 # The address to listen on
