--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,18 +11,20 @@ jobs:
   lint_test:
     uses: babylonlabs-io/.github/.github/workflows/reusable_go_lint_test.yml@v0.6.0
     with:
-     run-unit-tests: true
-     run-integration-tests: true
-     run-lint: true
-     run-build: true
-     run-gosec: true
-     gosec-args: "-exclude-generated ./..."
+      go-version: '1.23'
+      go-lint-version: 'v1.60.2'
+      run-unit-tests: true
+      run-integration-tests: true
+      run-lint: true
+      run-build: true
+      run-gosec: true
+      gosec-args: "-exclude-generated ./..."
 
   docker_pipeline:
     needs: ["lint_test"]
     uses: babylonlabs-io/.github/.github/workflows/reusable_docker_pipeline.yml@v0.6.0
     secrets: inherit
     with:
-     publish: true
-     dockerfile: ./Dockerfile
-     repoName: covenant-signer
+      publish: true
+      dockerfile: ./Dockerfile
+      repoName: covenant-signer
