--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,14 +7,21 @@ on:
 
 jobs:
   lint_test:
-    uses: babylonlabs-io/.github/.github/workflows/reusable_go_lint_test.yml@v0.1.0
+    uses: babylonlabs-io/.github/.github/workflows/reusable_go_lint_test.yml@v0.6.0
     with:
-     run-unit-tests: true
-     run-integration-tests: true
-     run-lint: true
+      go-version: '1.23'
+      go-lint-version: 'v1.60.2'
+      run-unit-tests: true
+      run-integration-tests: true
+      run-lint: true
+      run-build: true
+      run-gosec: true
+      gosec-args: "-exclude-generated ./..."
 
   docker_pipeline:
-    uses: babylonlabs-io/.github/.github/workflows/reusable_docker_pipeline.yml@v0.1.0
+    uses: babylonlabs-io/.github/.github/workflows/reusable_docker_pipeline.yml@v0.6.0
     secrets: inherit
     with:
-     publish: false
+      publish: false
+      dockerfile: ./Dockerfile
+      repoName: covenant-signer
