--- a/example/config.toml
+++ b/example/config.toml
@@ -52,3 +52,9 @@ max-content-length = 8192
 host = "127.0.0.1"
 # The prometheus server port
 port = 2112
+
+[signer-app-config]
+# The maximum height of staking transaction
+# Max value is 4294967295. Setting it to more than that will result in wrapping
+# around uint32 type.
+max-staking-transaction-height = 4294967295
