--- a/example/config.toml
+++ b/example/config.toml
@@ -55,6 +55,5 @@ port = 2112
 
 [signer-app-config]
 # The maximum height of staking transaction
-# Max value is 4294967295. Setting it to more than that will result in wrapping
-# around uint32 type.
+# Max value is 4294967295
 max-staking-transaction-height = 4294967295
