Konradstaniec/max unbodning signing height (#21)
* add config for max signing height

* improve config value validation

--- a/example/config.toml
+++ b/example/config.toml
@@ -52,3 +52,8 @@ max-content-length = 8192
 host = "127.0.0.1"
 # The prometheus server port
 port = 2112
+
+[signer-app-config]
+# The maximum height of staking transaction
+# Max value is 4294967295
+max-staking-transaction-height = 4294967295
